# url_player

./: CMakeLists.txt  LICENSE  build.sh
inc/: Application.h  Common.h  Event.h  ISubject.h  ISubscriber.h  Logger.h  VideoPlayerController.h  VideoPlayerEvent.h  VideoPlayerModel.h  VideoPlayerView.h
src/: Application.cpp  Logger.cpp  Main.cpp  VideoPlayerController.cpp  VideoPlayerModel.cpp  VideoPlayerView.cpp
